Add support for multiple users
update openapi.yaml

correct imports (a space after {)

multiusers: api: two less spaces

multiusers: change "Login" to "Username" for i18n

ButtonGeneric: not-allowed when disabled

multiusers: ajout traduction fr

usermanager: remove debug console.log

multiusers: better way to show the current user's login in the header

auth.ts: throw an error when a user already exists

auth.ts: remove a few debug prints

auth.test.ts: add a few tests for multiusers

auth.ts: check if a user already exists before adding it

auth.ts: eslint corrections (let to const)

multiusers: fix initDatabase (do not create an empty user)

multiusers: documentation

routerAuth: fix /bearer

multiusers: add/delete support

multiusers: first support

Add support for multi-user authentification

Header: add the current user's login
